fix detailed-SP about overflow, contacts overflow

--- a/src/widgets/specialist-card/ui/specialist-card.module.scss
+++ b/src/widgets/specialist-card/ui/specialist-card.module.scss
@@ -54,16 +54,6 @@
 		gap: 8px;
 		align-items: center;
 	}
-	&__statusIcon {
-		width: 16px;
-		height: 16px;
-		color: $--Colors-Green;
-	}
-	&__statusIconRed {
-		width: 16px;
-		height: 16px;
-		color: $--Colors-Red;
-	}
 	&__statusTitle {
 		@extend %baseText;
 		color: $--foreground-muted;
