--- a/src/widgets/specialist-detailed-card/ui/detailed-specialist-card.module.scss
+++ b/src/widgets/specialist-detailed-card/ui/detailed-specialist-card.module.scss
@@ -18,7 +18,6 @@
 	border-radius: 12px;
 	border: 2px solid $--border-default;
 	height: auto;
-	min-width: auto;
 	padding: 32px;
 	margin-bottom: 32px;
 	flex-wrap: wrap;
@@ -124,6 +123,7 @@
 	}
 	&__sideText {
 		@extend %baseText;
+		max-width: 1096px;
 		font-size: 16px;
 		font-weight: 400;
 		display: flex;
@@ -132,17 +132,26 @@
 	}
 	&__wrapper {
 		margin-bottom: 32px;
+		max-width: 100%;
 	}
-	&__contacts__wrapper {
-		margin-bottom: 16px;
+
+	&__contacs__wrapper {
+		display: flex;
+
 	}
+
 	&__contacts {
 		@extend %baseText;
 		font-size: 16px;
+		width: 280px;
+
+		overflow: hidden;
+		white-space: nowrap;
 		font-weight: 400;
 		color: #0075ff;
 		display: flex;
 		align-items: center;
+		justify-content: start;
 		margin: 0 8px 8px 0;
 	}
 	&__icons {
